Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-30247

UBSan: runtime error: member call on address does not point to an object of type 'DcpConnMap'

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      As seen during UBSan CV job: http://cv.jenkins.couchbase.com/job/kv_engine-undefinedsanitizer-master/812/consoleFull#256285182531cd01c-6372-43ba-87e9-b642784df0f9

      [ RUN      ] PersistentAndEphemeral/StreamTest.DiskBackfillFail/persistent
      /home/couchbase/jenkins/workspace/kv_engine-undefinedsanitizer-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:138:62: runtime error: member call on address 0x7f4192bb4000 which does not point to an object of type 'DcpConnMap'
      0x7f4192bb4000: note: object is of type 'ConnMap'
       00 00 00 00  b0 60 9f 01 00 00 00 00  00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  00 00 00 00
                    ^~~~~~~~~~~~~~~~~~~~~~~
                    vptr for 'ConnMap'
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jwalker Jim Walker
              drigby Dave Rigby (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty