engines/ep/tests/module_tests/collections/collections_dcp_test.cc
@@ -105,7 +105,6 @@ void CollectionsDcpTest::TearDown() {
 }
 
 void CollectionsDcpTest::teardown() {
-    engine->getDcpConnMap().processPendingNotifications();
     destroy_mock_cookie(cookieC);
     destroy_mock_cookie(cookieP);
     if (consumer) {
