engines/ep/tests/module_tests/dcp_reflection_test.cc
@@ -140,7 +140,6 @@ protected:
     }
 
     void TearDown() override {
-        engine->getDcpConnMap().processPendingNotifications();
         producer->cancelCheckpointCreatorTask();
         producer->closeAllStreams();
         producer.reset();
