engines/ep/tests/module_tests/kv_bucket_test.cc
@@ -102,7 +102,6 @@ void KVBucketTest::TearDown() {
 }
 
 void KVBucketTest::destroy() {
-    engine->getDcpConnMap().processPendingNotifications();
     destroy_mock_cookie(cookie);
     destroy_mock_event_callbacks();
     engine->getDcpConnMap().manageConnections();
